--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -40,6 +40,9 @@ const { src, title, body, textBtn , link} = Astro.props;
 		margin-top: 0;
 		padding: 0 30px;
 		font-family: "Noto Serif Georgian", serif;
+		font-weight: 300;
+		font-size: 17px;
+		line-height: 25px;
 	
 	}
 	.button {
@@ -48,14 +51,15 @@ const { src, title, body, textBtn , link} = Astro.props;
     border-radius: 30px;
     transition: 1s;
     background-color: #e6dbc8;
-    padding: 10px 40px;
+    padding: 11px 40px;
     font-size: small;
-    font-weight: 450;
+    font-weight: 600;
     margin: 3px;
     text-decoration: none;
     display: flex;
 	justify-content: center;
-    max-width: 200px;  
+    max-width: 150px;  
+	width: 100%;
 }
 
   .button:hover {
@@ -71,7 +75,9 @@ const { src, title, body, textBtn , link} = Astro.props;
   h2 {
 	color: #e6dbc8 ;
 	margin: 5px 0px 5px;
-	font-family: "Noto Serif Georgian", serif;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	font-weight: 400;
   }
   body{
  color: #666666;
