--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -60,7 +60,7 @@ const TIMESTAMP = 1727271000000;
   }
 
   span, p {
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Noto Serif Georgian', serif;
     font-size: x-small;
     color: #666;
   }
@@ -75,7 +75,7 @@ const TIMESTAMP = 1727271000000;
   }
   p {
     text-align: center;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Noto Serif Georgian', serif;
     font-size: small;
     margin: 10px;
     color: #666
@@ -108,7 +108,7 @@ const TIMESTAMP = 1727271000000;
     }
 
     p {
-        font-size: 23px;
+        font-size: 17px;
     }
   }
 
@@ -132,6 +132,9 @@ const TIMESTAMP = 1727271000000;
 
     .icon {
       max-width: 80px;
+    }
+    p {
+      font-size: 23px;
     }
   }
 </style>
