--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -22,12 +22,15 @@
     background-color: #e6dbc8;
     padding: 5px 40px;
     font-size: small;
-    font-weight: 450;
+    font-weight: 600;
     margin: 3px;
     text-decoration: none;
     display: inline-block;
     width: 100%;
-    max-width: 150px;  
+    max-width: 150px; 
+    font-family: 'Montserrat', sans-serif;
+    
+ 
 }
 
   .formula:hover {
@@ -36,7 +39,7 @@
   }
 
   p {
-    font-size: small;
+    font-size: large;
     display: block;
     color: #666666;
     font-family: "Noto Serif Georgian", serif;
@@ -44,11 +47,11 @@
   }
 
   h1 {
-    font-size: 40px;
+    font-size: 30px;
     margin: 0;
-    font-weight: 500;
+    font-weight: 400;
     color: #e6dbc8;
-    font-family: "Montserrat";
+    font-family: 'Montserrat', sans-serif;
   }
 
   main {
@@ -65,7 +68,7 @@
         font-size: large;
       }
       h1 {
-        font-size: 50px;
+        font-size: 30px;
       }
   }
 
