--- a/src/components/DressCode.astro
+++ b/src/components/DressCode.astro
@@ -1,149 +1,163 @@
 <section class="main">
-    <div class="dresscode">
-        <img src="/dress-code.png" />
-        <h1>DRESS CODE:</h1>
-        <p>Formal Elegante</p>
-        <button id="btn"> PALETA DE COLORES </button>   
-    </div>
+  <div class="dresscode">
+    <img src="/dress-code.png" />
+    <h1>DRESS CODE:</h1>
+    <p>Formal Elegante</p>
+    <button id="btn"> GAMA DE COLORES </button>
+  </div>
 </section>
 
 <dialog id="model" class="modal">
-    <div class="paleta">
-        <p style="color: #e6dbc8;">Colores:</p>
-        <div class="gama">
-            <div class="gama-colors">
-                <div class="color" style="background-color: #C1C4A9;"></div>
-                <div class="color" style="background-color: #A0A77E"></div>
-                <div class="color" style="background-color: #546B51;"></div>
-                <div class="color" style="background-color: #000000"></div>
-            </div>
-            <div class="gama-colors">
-                <div class="color" style="background-color: #F4D9C4;"></div>
-                <div class="color" style="background-color: #CC9D8B;"></div>
-                <div class="color" style="background-color: #6B534F;"></div>
-                <div class="color" style="background-color: #9B5D48;"></div>
-            </div>
-        </div>
+  <div class="paleta">
+    <p style="color: #e6dbc8; font-size: 20px;">
+      Vestir con alguno de los siguientes colores:
+    </p>
+    <div class="gama">
+      <div class="gama-colors">
+        <div class="color" style="background-color: #C1C4A9;"></div>
+        <div class="color" style="background-color: #A0A77E"></div>
+        <div class="color" style="background-color: #546B51;"></div>
+        <div class="color" style="background-color: #000000"></div>
+      </div>
+      <div class="gama-colors">
+        <div class="color" style="background-color: #F4D9C4;"></div>
+        <div class="color" style="background-color: #CC9D8B;"></div>
+        <div class="color" style="background-color: #6B534F;"></div>
+        <div class="color" style="background-color: #9B5D48;"></div>
+      </div>
     </div>
-    <button id="cerrar" class="btn">cerrar</button>
-  </dialog>
-  <script>
-    const ele = document.querySelectorAll(".fade-in");
-    const wh = window.innerHeight * 0.8;
-  
-    document.addEventListener("scroll", () => {
-      ele.forEach((e) => {
-        if (e.getBoundingClientRect().top < wh) {
-          e.classList.add("show");
-        }
-      });
-    });
-  </script>
-  
-  <script is:inline>
-    const modal = document.querySelector("#model");
-    const btn = document.querySelector("#btn");
-    const btncerrar = document.querySelector("#cerrar");
-  
-    btn.addEventListener("click", () => {
-      modal.showModal();
-    });
-  
-    btncerrar.addEventListener("click", () => {
-      modal.close();
-    });
-  </script>
- 
-<style>
-    .paleta {
-        background: #ffffff;
-        max-width: 300px;
-        padding: 10px;
-        border-radius: 05px;
-        margin-top: 10px;
-    }
-    .gama {
-        width: 100%;
-        height: auto;
-        display: flex;
-        gap: 10px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  </div>
+  <button id="cerrar" class="btn">Cerrar</button>
+</dialog>
+<script>
+  const ele = document.querySelectorAll(".fade-in");
+  const wh = window.innerHeight * 0.8;
 
-    .gama-colors {
-        /* width: 100%; */
-        height: auto;
-        display: flex;
-        gap: 10px;
-    }
-    .color {
-        width: 40px;
-        height: 40px;
-        background: #000;
-        border-radius: 20px 20px 0 0;
-    }
-    img {
-        text-align: center;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        border-radius: 100%;
-        max-height: 80px;
-        padding: 20px;
-    }
-    .main {
-        background-color: #e6dbc8;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    h1 {
-        color: #ffffff;
-        padding: 20px 0px 0xp 0xp;
-        font-size: 30px;
-        font-weight: 400;
-        width: 300px;
-        height: 50px;
-        text-align: center;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    p {
-        color: #ffffff;
-        padding: 0px 0px 0px 0px;
-        font-size: 25px;
-        font-weight: 300;
-        font-family: "Noto Serif Georgian", serif;
-        text-align: center;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    #btn {
-    color:#e6dbc8;
+  document.addEventListener("scroll", () => {
+    ele.forEach((e) => {
+      if (e.getBoundingClientRect().top < wh) {
+        e.classList.add("show");
+      }
+    });
+  });
+</script>
+
+<script is:inline>
+  const modal = document.querySelector("#model");
+  const btn = document.querySelector("#btn");
+  const btncerrar = document.querySelector("#cerrar");
+
+  btn.addEventListener("click", () => {
+    modal.showModal();
+  });
+
+  btncerrar.addEventListener("click", () => {
+    modal.close();
+  });
+</script>
+
+<style>
+  .paleta {
+    background: #ffffff;
+    max-width: 300px;
+    padding: 10px;
+    border-radius: 05px;
+    margin-top: 10px;
+  }
+  .gama {
+    width: 100%;
+    height: auto;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .gama-colors {
+    /* width: 100%; */
+    height: auto;
+    display: flex;
+    gap: 10px;
+  }
+  .color {
+    width: 40px;
+    height: 40px;
+    background: #000;
+    border-radius: 20px 20px 0 0;
+  }
+  img {
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 100%;
+    max-height: 80px;
+    padding: 10px;
+  }
+  .main {
+    background-color: #e6dbc8;
+    padding: 40px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  h1 {
+    color: #ffffff;
+    padding: 20px 0px 0xp 0xp;
+    font-size: 30px;
+    font-weight: 400;
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  p {
+    color: #ffffff;
+    padding: 0px 0px 0px 0px;
+    font-size: 25px;
+    font-weight: 300;
+    font-family: "Noto Serif Georgian", serif;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #btn, .btn {
+    color: #e6dbc8;
     border: 2px solid #ffffff;
     border-radius: 30px;
     transition: 1s;
     background-color: #ffffff;
     padding: 12px 45px;
     font-size: 13px;
-    font-weight: 450;
+    font-weight: 600;
     margin: 3px;
     text-decoration: none;
     display: inline-block;
+  }
+  #btn:hover {
+    background-color: transparent;
+    color: #ffffffcb;
+  } 
+  .btn {
+    background-color:#e6dbc8;
+    color: #fff;
+    cursor: pointer;
+
+    &&:hover {
+      background-color: #fff;
+      color: #e6dbc8;
+      border: 1px solid #e6dbc8;
     }
-    #btn:hover {
-      background-color: transparent;
-      color: #ffffffcb;
-    }
+  }
   .modal {
     width: 100%;
     max-width: 500px;
@@ -152,4 +166,13 @@
     text-align: center;
     max-width: 300px;
   }
+  .dresscode {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+
 </style>
