add google confirmation

--- a/src/components/DressCode.astro
+++ b/src/components/DressCode.astro
@@ -142,6 +142,7 @@
     margin: 3px;
     text-decoration: none;
     display: inline-block;
+    cursor: pointer;
   }
   #btn:hover {
     background-color: transparent;
