--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -81,14 +81,14 @@
   <div id="cards-container">
     <div class="confirmacion">
       <h1>RSPV</h1>
-      <p>Espero que seas parte de esta gran celebracion.</p>
+      <p>Espero que seas parte de esta gran celebración.</p>
       <p>¡Confirmanos tu asistencia!</p>
       <a
         href="https://docs.google.com/forms/d/e/1FAIpQLSdW2MNrglehWBmiLAHzLwOnCrolTRkofHxRKpsMmfAbPpho_g/viewform?usp=sf_link"
         target="_blank"
         class="formula">CONFIRMAR</a>
       <div class="agendar">
-        <a href="" target="_blank" class="formula">AGENDAR EVENTO</a>
+        <a href="https://calendar.app.google/Xf4JXvAfRwEFLs8P7" target="_blank" class="formula">AGENDAR EVENTO</a>
       </div>
     </div>
   </div>
