--- a/src/components/Farewell.astro
+++ b/src/components/Farewell.astro
@@ -9,7 +9,6 @@
 <style>
     .farewell {
         background: url("/foto-de-dos.png");
-        height: 30vh;
         width: 100vw;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -20,22 +19,22 @@
         justify-content: center;
         align-items: start;
         text-align: center;
-
     }
 
     .farewell_img {
-        animation: 5s fade_in;
+        animation: 3s fade_in;
     }
 
     img {
         margin-top: 60px;
-        max-width: 100xp;
+        max-width: 200px;
         margin-top: 0;
-        width: 10vw;
+        /* width: 10vw; */
         text-align: center;
     }
     p {
-        font-size: 20px;
+        font-size: large;
+        text-wrap: balance;
         color: #ffffff;
         margin: 5px;
         margin-bottom: 20px;
