--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Farewell from "../components/Farewell.astro";
 import Songs from "../components/Songs.astro";
 ---
 
-<Layout title="Welcome to Wedding">
+<Layout title="Carola & Shary">
   <main>
     <Hero />
     <Countdown />
