--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -29,7 +29,7 @@ const { src, title, body, textBtn , link} = Astro.props;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		height: 500px;
+		height: auto;
 		margin: 0 ;
 		gap: 10px;
 
