--- a/src/components/Confirmation.astro
+++ b/src/components/Confirmation.astro
@@ -77,8 +77,8 @@
   }
 </style>
 
-<main class="fade-in">
-  <div id="cards-container">
+<main>
+  <div id="cards-container" class="fade-in">
     <div class="confirmacion">
       <h1>RSPV</h1>
       <p>Espero que seas parte de esta gran celebración.</p>
