--- a/src/components/Gift.astro
+++ b/src/components/Gift.astro
@@ -82,8 +82,8 @@
   }
 </style>
 
-<main class="fade-in">
-  <div id="container">
+<main>
+  <div id="container" class="fade-in">
     <div class="gift">
       <img src="/regalos.png" />
       <p>
