--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,12 +5,13 @@ interface Props {
 	src: string;
 	textBtn: string;
 	link: string;
+	direction: string
 }
 
-const { src, title, body, textBtn , link} = Astro.props;
+const { src, title, body, textBtn , link, direction} = Astro.props;
 ---
 
-<article class="card-events">
+<article class={`card-events ${direction}`}>
 	<img src={src} alt="" />
 	<h2>{title}</h2>
 	<p>{body}</p>
@@ -32,8 +33,6 @@ const { src, title, body, textBtn , link} = Astro.props;
 		height: auto;
 		margin: 0 ;
 		gap: 10px;
-
-		
 	}
 	p {
 		text-align: center;
@@ -43,7 +42,6 @@ const { src, title, body, textBtn , link} = Astro.props;
 		font-weight: 300;
 		font-size: 17px;
 		line-height: 25px;
-	
 	}
 	.button {
 	color: #ffffff;
@@ -83,3 +81,21 @@ const { src, title, body, textBtn , link} = Astro.props;
  color: #666666;
   }
 </style>
+<script>
+    const eleR = document.querySelectorAll(".slideRight");
+    const eleL = document.querySelectorAll(".slideLeft");
+    const wh = window.innerHeight * 0.8;
+  
+    document.addEventListener("scroll", () => {
+		eleR.forEach((e) => {
+			if(e.getBoundingClientRect().top < wh){
+				e.classList.add("show")
+			}
+		})
+		eleL.forEach((e) => {
+			if(e.getBoundingClientRect().top < wh){
+				e.classList.add("show")
+			}
+		})
+    })
+</script>
