--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -9,7 +9,7 @@ import Card from "./Card.astro";
         body="25 de septiembre a las 13:30 horas en Av. Patricias Argentinas 277. Haz clic en el botón para recibir las indicaciones y llegar fácilmente."
         textBtn="COMO LLEGAR"
         link="https://www.google.com/maps/place/Av.+Patricias+Argentinas+277,+C1414+Cdad.+Aut%C3%B3noma+de+Buenos+Aires/@-34.6058084,-58.4352806,17z/data=!3m1!4b1!4m6!3m5!1s0x95bcca6eea50e4e7:0x603b6d1d1fc559b6!8m2!3d-34.6058128!4d-58.4327057!16s%2Fg%2F11c26jqqbm?hl=es&entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D"
-        
+        direction="slideRight"  
     />
     <Card
         src="/copas.png"
@@ -17,6 +17,7 @@ import Card from "./Card.astro";
         body="Después de la ceremonia, festejaremos en Hipocampo, en Av. Santa Fe 1126, a las 19:00 horas. Haz clic en el botón para recibir las indicaciones para llegar. ¡Te esperamos!"
         textBtn="COMO LLEGAR"
         link="https://www.google.com/maps/place/Av.+Sta.+Fe+1126,+C1059ABS+Cdad.+Aut%C3%B3noma+de+Buenos+Aires/@-34.5956343,-58.3858601,17z/data=!3m1!4b1!4m6!3m5!1s0x95bccb2be7dea4ef:0xe84635e828391588!8m2!3d-34.5956387!4d-58.3832852!16s%2Fg%2F11tjscf608?hl=es&entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D"
+        direction="slideLeft"
     />
 </section>
 
@@ -29,6 +30,7 @@ import Card from "./Card.astro";
         gap: 40px;
         background: #e6dbc8;
 		padding: 20px;
+        overflow-x: hidden;
     }
 
     @media (min-width: 640px){
